Fix SQL unmarshalling of optional nested structs (LEFT JOIN)
